// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`route / 1`] = `
<div
  style={
    Object {
      "marginTop": 100,
      "textAlign": "center",
    }
  }
>
  <h3>
    <a
      href="/start"
      id="start"
      onClick={[Function]}
    >
      Start
    </a>
  </h3>
</div>
`;

exports[`route /dummy 1`] = `
<h1>
  204 No Content
</h1>
`;

exports[`route /start 1`] = `
<div
  style={
    Object {
      "marginTop": 100,
      "textAlign": "center",
    }
  }
>
  <h1>
    Electron + React + Parcel
  </h1>
  <h3>
    <a
      href="/"
      onClick={[Function]}
    >
      Back
    </a>
  </h3>
</div>
`;
